almost all added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bangladesh</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -14,10 +20,59 @@
     <div class="section-1">
       <div class="parent">
         <div class="left">
-          <h1>Bangladesh</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda quisquam ullam mollitia impedit sapiente atque amet voluptates, fugiat consequatur inventore qui accusantium harum excepturi nulla laboriosam cum nobis! Quis natus delectus adipisci voluptas repudiandae commodi fugit, consequuntur incidunt at cum!</p>
+          <h1 class="section-title">Bangladesh</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+            quisquam ullam mollitia impedit sapiente atque amet voluptates,
+            fugiat consequatur inventore qui accusantium harum excepturi nulla
+            laboriosam cum nobis! Quis natus delectus adipisci voluptas
+            repudiandae commodi fugit, consequuntur incidunt at cum!
+          </p>
+          <button class="btn-detail">Details</button>
         </div>
-        <div class="right"></div>
+        <div class="right">
+          <div class="photo">
+            <img src="./images/Bangladesh.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section2">
+      <div class="divishion-title"><h1>Divishons</h1></div>
+      <div class="divishons">
+        <div class="Dhaka size">
+          <img src="./images/Dhaka.jpg" alt="" />
+          <div class="box-text">
+            <h2>Dhaka</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur fuga voluptates ducimus veritatis voluptate sit sed
+              accusantium quis quas dolorem?
+            </p>
+          </div>
+        </div>
+        <div class="Sylhet size">
+          <img src="./images/Sylhet.jpg" alt="" />
+          <div class="box-text">
+            <h2>Sylhet</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur fuga voluptates ducimus veritatis voluptate sit sed
+              accusantium quis quas dolorem?
+            </p>
+          </div>
+        </div>
+        <div class="Rajshahi size">
+          <img src="./images/Rajshahi.jpg" alt="" />
+          <div class="box-text">
+            <h2>Rajshahi</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Consequuntur fuga voluptates ducimus veritatis voluptate sit sed
+              accusantium quis quas dolorem?
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
